[ADDED] Create endpoints for Role, and Team
